Repo FileIO and ServiceData all restructured.  Massive refactoring of all three.